--- a/package.json
+++ b/package.json
@@ -9,10 +9,16 @@
 		"lint": "next lint"
 	},
 	"dependencies": {
+		"@chakra-ui/icons": "^2.0.16",
+		"@chakra-ui/react": "^2.4.8",
+		"@emotion/react": "^11.10.5",
+		"@emotion/styled": "^11.10.5",
 		"@types/node": "18.11.13",
 		"@types/react": "18.0.26",
 		"@types/react-dom": "18.0.9",
+		"antd": "^5.1.4",
 		"clsx": "^1.2.1",
+		"framer-motion": "^6.5.1",
 		"next": "13.0.6",
 		"react": "18.2.0",
 		"react-dom": "18.2.0",
